	- Patch from James Graham to make Ctrl+P print
	- Patch adapted from James to make new documents start in new windows
	- Add context menu to plot window to change update period
	- Also add force update option
	- Change lots of button pressed() to clicked() as pressed() breaks
	appearance of button
	- Allow datasets to be unlinked in data edit dialog
	- Add Import button to data edit dialog
	
* 2005-05-14 Jeremy Sanders <jeremy@jeremysanders.net>
	- New widget property code using QTable
	
* 2005-05-11 Jeremy Sanders <jeremy@jeremysanders.net>
	- Make super and subscripts move further up and down
	- Adjust alignment code to take account of above modification
	- Document embedding Veusz in other programs
	- Document security of Veusz scripts
	
* 2005-05-10 Jeremy Sanders <jeremy@jeremysanders.net>
	- Fit dataset options now have drop down menus
	- Added \font{fontname}{text} and \size{[+-]fontsize}{text} to
	LaTeX-like parser to change font or font size
	- Also some bug fixes to LaTeX-like parser
	- Modeless dialogs fixed to use close instead of done
	- Fitting can now fit selected ranges of data (see fitRange parameter)
	- Various fitting sanity checks
	- Fitting should now work for functions of y as well as x
	
* 2005-05-09 Jeremy Sanders <jeremy@jeremysanders.net>
	- Fix problem with log axis if minimum is zero
	- Highlight setting label if has mouse over / focus / context menu
	- Remove label from top of context menus
	- Fix properties shortcut label
	
* 2005-05-08 Jeremy Sanders <jeremy@jeremysanders.net>
	- Add embed module to embed Veusz in other Python apps
	
* 2005-05-07 Jeremy Sanders <jeremy@jeremysanders.net>
	- Complete data editing dialog
	- Add data new dialog
	- Add data new dialog to Data menu in main window
	
* 2005-05-04 Jeremy Sanders <jeremy@jeremysanders.net>
	- Put in Jamie Crummy's patch to show "Untitled" for new document
	
* 2005-05-03 Jeremy Sanders <jeremy@jeremysanders.net>
	- Take out toolbar position hack from mainwindow